--- a/desarrolloClases/desarrolloClases.vcxproj
+++ b/desarrolloClases/desarrolloClases.vcxproj
@@ -115,10 +115,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="muestra.cpp" />
     <ClCompile Include="sensores.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="muestra.h" />
     <ClInclude Include="sensores.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
