Checar aprendizaje en KNN

--- a/desarrolloClases/desarrolloClases.vcxproj.filters
+++ b/desarrolloClases/desarrolloClases.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClCompile Include="LearningSet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="KNN.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="queue.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="muestra.h">
@@ -36,6 +42,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="LearningSet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="KNN.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="queue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
