--- a/desarrolloClases/desarrolloClases.vcxproj
+++ b/desarrolloClases/desarrolloClases.vcxproj
@@ -115,14 +115,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="KNN.cpp" />
     <ClCompile Include="LearningSet.cpp" />
     <ClCompile Include="muestra.cpp" />
+    <ClCompile Include="queue.cpp" />
     <ClCompile Include="sensors.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="KNN.h" />
     <ClInclude Include="LearningSet.h" />
     <ClInclude Include="muestra.h" />
+    <ClInclude Include="queue.h" />
     <ClInclude Include="sensors.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
